cmake_minimum_required(VERSION 3.31.0)
set(C_STANDARD C17)
project("SpreadsheetParser" LANGUAGES C VERSION 0.1 DESCRIPTION "Spreadsheet parser for e-commerce operations")

find_package(Git QUIET)
if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
# Update submodules as needed
    option(GIT_SUBMODULE "Check submodules during build" ON)
    if(GIT_SUBMODULE)
        message(STATUS "Submodule update")
        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
                        WORKING_DIRECTORY "./modules/"
                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
            message(FATAL_ERROR "git submodule update --init --recursive failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
        endif()
    endif()
endif()

# Has LVGL been downloaded?
if(NOT EXISTS "${PROJECT_SOURCE_DIR}/submodules/lvgl/CMakeLists.txt")
    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
endif()

# Has LVGL been downloaded?
if(NOT EXISTS "${PROJECT_SOURCE_DIR}/submodules/xlsxiolvgl/CMakeLists.txt")
    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
endif()


add_executable(${PROJECT_NAME} ./src/main.c)
